# tmpl_chs_patch

./: ass_render.cpp  ass_render.h  dllmain.cpp  exports.def  m3t.cpp  m3t.h  meson.build  meson_options.txt  proxy.cpp  proxy.h  strings_dat.cpp  strings_dat.h  vfs.cpp  vfs.hpp
lib/: mpv.lib
subprojects/: harfbuzz.wrap  libzip.wrap
